--- a/CurrencyTerminal.App/CurrencyTerminal.App.csproj
+++ b/CurrencyTerminal.App/CurrencyTerminal.App.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Map\" />
+    <PackageReference Include="AutoMapper" Version="15.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CurrencyTerminal.Domain\CurrencyTerminal.Domain.csproj" />
   </ItemGroup>
 
 </Project>
